log_humble/build_2026-06-08_02-14-58/tutorial_pkg/stderr.log
/ws/tutorial_pkg/src/my_first_node.cpp: In constructor ‘MyNode::MyNode()’:
/ws/tutorial_pkg/src/my_first_node.cpp:19:13: error: ‘publisher_’ was not declared in this scope; did you mean ‘rmw_publisher_t’?
   19 |             publisher_ = create_publisher<std_msgs::msg::UInt8>
      |             ^~~~~~~~~~
      |             rmw_publisher_t
/ws/tutorial_pkg/src/my_first_node.cpp: In member function ‘void MyNode::image_callback(sensor_msgs::msg::Image_<std::allocator<void> >::SharedPtr)’:
/ws/tutorial_pkg/src/my_first_node.cpp:33:28: error: ‘UInt’ is not a member of ‘std_msgs::msg’; did you mean ‘UInt8’?
   33 |             std_msgs::msg::UInt 8 brightness_msg;
      |                            ^~~~
      |                            UInt8
/ws/tutorial_pkg/src/my_first_node.cpp:34:13: error: ‘brightness_msg’ was not declared in this scope
   34 |             brightness_msg.data = avg;
      |             ^~~~~~~~~~~~~~
/ws/tutorial_pkg/src/my_first_node.cpp:34:35: error: ‘avg’ was not declared in this scope
   34 |             brightness_msg.data = avg;
      |                                   ^~~
/ws/tutorial_pkg/src/my_first_node.cpp:35:13: error: ‘publisher_’ was not declared in this scope; did you mean ‘rmw_publisher_t’?
   35 |             publisher_->publish(brightness_msg);
      |             ^~~~~~~~~~
      |             rmw_publisher_t
gmake[2]: *** [CMakeFiles/my_first_node.dir/build.make:76: CMakeFiles/my_first_node.dir/src/my_first_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/my_first_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
